@@ -4,6 +4,7 @@
   creates anonymous sessions (checks for User-Agent containing "Googlebot").
 - Fixed XML Prolog breaking parsing when the synthetic root element is inserted.
 - Fixed "]]>" not being escaped inside text literals in JavaScript and Dart inlining.
+- Added new null-safe "#strings.toString(obj)" utility method for expression evaluation.
 
 
 2.0.11
